test_project/test_pcks/invalid/audio.ogg.import
[remap]

importer="oggvorbisstr"
type="AudioStreamOggVorbis"
uid="uid://cp2vyyxvs35u6"
path="res://.godot/imported/audio.ogg-5e6d256be89d5cea5c6eb1b325481b00.oggvorbisstr"

[deps]

source_file="res://test_pcks/invalid/audio.ogg"
dest_files=["res://.godot/imported/audio.ogg-5e6d256be89d5cea5c6eb1b325481b00.oggvorbisstr"]

[params]

loop=false
loop_offset=0
bpm=0
beat_count=0
bar_beats=4
